fix: change outline visibility

--- a/datagrid/src/containers/table/Table.module.css
+++ b/datagrid/src/containers/table/Table.module.css
@@ -1,3 +1,4 @@
 .wrapper {
   border: 1px solid rgb(73, 71, 71);
+  outline: 0;
 }
